--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue": "^2.5.13"
     },
     "dependencies": {
+        "moment": "^2.20.1",
+        "vue-momentjs": "^0.1.1",
         "vue-router": "^3.0.1"
     }
 }
