--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.13"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.0.0-rc.1",
         "moment": "^2.20.1",
         "vue-momentjs": "^0.1.1",
         "vue-router": "^3.0.1"
