--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,16 @@
         "laravel/framework": "5.6.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
-        "socialiteproviders/strava": "^3.0"
+        "socialiteproviders/strava": "^3.0",
+        "phpunit/phpunit": "~7.0",
+        "mockery/mockery": "~1.0",
+        "fzaninotto/faker": "~1.4"
+
+
     },
     "require-dev": {
         "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "~1.0",
         "nunomaduro/collision": "~1.1",
-        "phpunit/phpunit": "~7.0",
         "symfony/thanks": "~1.0"
     },
     "autoload": {
